<resources>
    <string name="app_name">Ur Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Your Location App</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="country_name">"Country: "</string>
    <string name="locality">Locality: </string>
    <string name="address">Address: </string>
    <string name="go_back">Go Back</string>
    <string name="show_maps">Show Maps</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="widget_id_label">Widget ID</string>
    <string name="widget_update_label">Last updated</string>
    <string name="widget_button_update">Update now</string>
    <string name="widget_button_map">Show map</string>
    <string name="label">Your Location:</string>
    <string name="none" translatable="false"></string>
    <string name="language">Language</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="compass">Compass</string>
</resources>